dark mode issue on login page and signup page halndling

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 *{
     font-family: 'inter';
     margin: 0px;
+    background-color: white;
+    color: black;
 }
 body{
     background-color: white;
